<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.groupDetails.GroupDetailsFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameGroupDetailsLayout"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:hint="@string/nameGroup"
        android:layout_marginTop="184dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameGroupDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/countMembersDetailsLayout"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/countMembers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameGroupDetailsLayout"
        android:focusable="false"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/countMembersDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/facultyDetailsLayout"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/faculty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countMembersDetailsLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/facultyDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/updateGroupBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="176dp"
        android:text="@string/update"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facultyDetailsLayout" />

    <Button
        android:id="@+id/deleteGroupBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="176dp"
        android:text="@string/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toEndOf="@+id/updateGroupBtn"
        app:layout_constraintTop_toBottomOf="@+id/facultyDetailsLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>