<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.studentDetails.StudentDetailsFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastNameDetailsLayout"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:hint="@string/lastName"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lastNameDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/firstNameDetailsLayout"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/firstName"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameDetailsLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstNameDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/patronymicDetailsLayout"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/patronymic"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameDetailsLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/patronymicDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/birthdayDetailsLayout"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/birthday"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patronymicDetailsLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/birthdayDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/groupForStudentDetailsLayout"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/group"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthdayDetailsLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/groupForStudentDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/saveStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/los_angeles_deco"
        android:text="@string/save"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupForStudentDetailsLayout"
        app:layout_constraintVertical_bias="0.288" />

    <Button
        android:id="@+id/deleteStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/los_angeles_deco"
        android:text="@string/delete"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveStudent"
        app:layout_constraintVertical_bias="0.116" />

</androidx.constraintlayout.widget.ConstraintLayout>