<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.newGroup.NewGroupFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameNewGroupLayout"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="224dp"
        android:hint="@string/nameGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameNewGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/facultyNewLayout"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/faculty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameNewGroupLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">>

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/facultyNew"
            android:padding="12dp"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/saveGroupBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facultyNewLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>